<resources>
    <string name="app_name">Wallpaper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nav_menu_star">评分</string>
    <string name="nav_menu_lang">语言</string>
    <string name="nav_menu_update">检查更新</string>
    <string name="nav_menu_share">分享给朋友</string>
    <string name="nav_menu_feedback">反馈</string>
    <string name="nav_menu_settings">设置</string>
    <string name="nav_menu_about">关于</string>

    <string name="tab_choice">精选</string>
    <string name="tab_type">类别</string>
    <string name="tab_explore">发现</string>

    <string name="load_more_loading">加载中…</string>
</resources>
