<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item
            android:id="@+id/nav_star"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/nav_menu_star"/>
    <item
            android:id="@+id/nav_lang"
            android:icon="@drawable/ic_language_black_24dp"
            android:title="@string/nav_menu_lang"/>

    <item
            android:id="@+id/nav_update"
            android:icon="@drawable/ic_check_update_black_24dp"
            android:title="@string/nav_menu_update"/>
    <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/nav_menu_share"/>
    <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_send_black_24dp"
            android:title="@string/nav_menu_feedback"/>
    <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_menu_settings"/>
    <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about_black_24dp"
            android:title="@string/nav_menu_about"/>

</menu>
